# torrust-mactracker

./: .gitignore  Dockerfile.gui  Dockerfile.index  Dockerfile.tracker  Dockerfile.webadmin  README.md  deploy.sh  docker-compose.yml  install.sh  nginx.conf  setup-cloud.sh  start-local.sh  test-deployment.sh  update.sh
nginx/: nginx.conf
torrust-index-gui/: nuxt.config.ts  package-lock.json  package.json  tsconfig.json
torrust-index-gui/components/: Markdown.vue  Pagination.vue
torrust-index-gui/components/authentication/: AuthenticationForm.vue
torrust-index-gui/components/license/: License.vue
torrust-index-gui/components/navigation/: NavigationBar.vue
torrust-index-gui/components/registration/: RegistrationForm.vue
torrust-index-gui/components/torrent/: TorrentActionCard.vue  TorrentCreationDateTab.vue  TorrentDetails.vue  TorrentTable.vue
torrust-index-gui/components/user/: ChangePasswordForm.vue  UserTable.vue
torrust-index-gui/composables/: states.ts
torrust-index-gui/cypress/e2e/contexts/category/: tasks.ts
torrust-index-gui/cypress/e2e/contexts/category/specs/: add.cy.ts  delete.cy.ts
torrust-index-gui/cypress/e2e/contexts/tag/: tasks.ts
torrust-index-gui/cypress/e2e/contexts/tag/specs/: add.cy.ts  delete.cy.ts
torrust-index-gui/pages/: torrents.vue  upload.vue
torrust-index-gui/pages/admin/: settings.vue
torrust-index-gui/pages/admin/settings/: categories.vue  tags.vue  users.vue
torrust-index-gui/pages/torrent/edit/: [infoHash].vue
torrust-index-gui/plugins/: notifications.client.ts
torrust-index-gui/types/: notiwind-ts.d.ts
torrust-index/src/: errors.rs  mailer.rs
torrust-index/src/config/v2/: net.rs
torrust-index/src/console/commands/seeder/: app.rs
torrust-index/src/databases/: database.rs  mysql.rs  sqlite.rs
torrust-index/src/models/: response.rs  user.rs
torrust-index/src/services/: authorization.rs  torrent.rs  user.rs
torrust-index/src/tracker/: api.rs  service.rs
torrust-index/src/web/api/server/: mod.rs
torrust-index/src/web/api/server/v1/contexts/torrent/: handlers.rs
torrust-index/src/web/api/server/v1/contexts/user/: handlers.rs
torrust-index/tests/e2e/: environment.rs
torrust-index/tests/environments/: isolated.rs
torrust-tracker/: .gitignore  Cargo.toml  cSpell.json
torrust-tracker/.github/workflows/: deployment.yaml
torrust-tracker/console/tracker-client/: Cargo.toml
torrust-tracker/console/tracker-client/src/console/clients/checker/: app.rs
torrust-tracker/console/tracker-client/src/console/clients/checker/checks/: udp.rs
torrust-tracker/console/tracker-client/src/console/clients/udp/: checker.rs
torrust-tracker/contrib/bencode/benches/: bencode_benchmark.rs
torrust-tracker/contrib/dev-tools/benches/: run-benches.sh
torrust-tracker/contrib/dev-tools/git/hooks/: pre-commit.sh  pre-push.sh
torrust-tracker/docs/: index.md  packages.md
torrust-tracker/share/default/config/: tracker.development.sqlite3.toml
torrust-tracker/src/: app.rs  container.rs  lib.rs  main.rs
torrust-tracker/src/bootstrap/: app.rs
torrust-tracker/src/bootstrap/jobs/: activity_metrics_updater.rs  health_check_api.rs  http_tracker_core.rs  manager.rs  mod.rs  torrent_cleanup.rs  torrent_repository.rs  tracker_apis.rs  tracker_core.rs  udp_tracker.rs  udp_tracker_core.rs  udp_tracker_server.rs
torrust-tracker/src/console/: profiling.rs
torrust-tracker/src/console/ci/e2e/: logs_parser.rs  runner.rs
torrust-tracker/tests/: integration.rs
torrust-tracker/tests/servers/api/contract/stats/: mod.rs
webadmin/: package-lock.json  package.json  server.js
webadmin/public/: index.html
